# music_studio

./: CLAUDE.md  README.md  pyproject.toml
runs/fog-2026-05-05/: build_descriptions.py  compose_covers.py  github_links.json  handoff.md  patch_youtube_descriptions.py  upload_to_drive.py  upload_to_github.py  upload_to_youtube.py  youtube_descriptions_to_paste.md  youtube_results.json
runs/obie-wan-2026-05-13/: plan.md
runs/obie-wan-2026-05-13/audio/: run_suno.py  upload.json
runs/obie-wan-2026-05-13/title/: render_title.py
runs/studio-remix-2026-05-31/: handoff.md  stage_upload.py
runs/studio-remix-2026-05-31/analysis/: analyze.py  clipA_0735am_51s.json  clipB_357pm_113s.json  clipC_357pm_121s.json  summary.json
tests/: test_smoke.py
